loading dynamic content before dom is ready

--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
 
         <div class="explain">
           Here's the <code>onRowClick</code> event handler with the codes for adding and removing the padding rows highlighted:<br/>
-          <div id="code-block-simple-snip-js" class="code-block"></div>
+          <div id="code-block-simple-snip-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           so far so good ..buuut, this implementation <i>does happen to involve</i> a slight hack in order to inject
           our detail panel into the <code>slick-row</code>.. here's all the codes with the relevant sections highlighted:<br/>
-          <div id="code-block-simple-js" class="code-block"></div>
+          <div id="code-block-simple-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           & here's the relevant <b>css</b>:<br/>
-          <div id="code-block-simple-css" class="code-block"></div>
+          <div id="code-block-simple-css" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -259,11 +259,11 @@
           </div>
           <br/>
           Here is the callback implemenation:
-          <div id="code-block-no-resize-no-postrender-snip-js" class="code-block"></div>
+          <div id="code-block-no-resize-no-postrender-snip-js" class="code-block"><i/></div>
 
           <br/>
           And here is the <b>css</b>:
-          <div id="code-block-no-resize-no-postrender-css" class="code-block"></div>
+          <div id="code-block-no-resize-no-postrender-css" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -301,7 +301,7 @@
 
         <div class="explain">
           Here is the entire code module with the relevant sections highlighted:
-          <div id="code-block-no-resize-no-postrender-js" class="code-block"></div>
+          <div id="code-block-no-resize-no-postrender-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -349,13 +349,13 @@
 
         <div class="explain">
           We need to re-factor the codes by creating a couple of functions for adding and removing padding rows.
-          <div id="code-block-resize-no-postrender-snip1-js" class="code-block"></div>
+          <div id="code-block-resize-no-postrender-snip1-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           <br/>
           Also, we've abstracted the height calculation out of the <code>kookupDynamicContent</code> content generating function.
-          <div id="code-block-resize-no-postrender-snip3-js" class="code-block"></div>
+          <div id="code-block-resize-no-postrender-snip3-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -363,13 +363,13 @@
           And now we can implement a handler for the <b>Slickgrid</b>
           <a class="link3" href="https://github.com/mleibman/SlickGrid/wiki/Grid-Events" target="_blank">Grid.onColumnsResized</a>
           event:
-          <div id="code-block-resize-no-postrender-snip2-js" class="code-block"></div>
+          <div id="code-block-resize-no-postrender-snip2-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           <br/>
           Here is the entire code module with the relevant sections highlighted:
-          <div id="code-block-resize-no-postrender-js" class="code-block"></div>
+          <div id="code-block-resize-no-postrender-js" class="code-block"><i/></div>
           Juuust sneaking in there at under 400 lines..<br/>
           <a class="link2" href="http://jsfiddle.net/violet313/28sqpa3h/" target="_blank">fiddle with it!</a>
         </div>
@@ -400,7 +400,7 @@
 
         <div class="explain">
           Here's the little monster all wrapped up in a closure:
-          <div id="code-block-resize-sort-snip-js" class="code-block"></div>
+          <div id="code-block-resize-sort-snip-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -433,7 +433,7 @@
           </p>
           <br/>
           Here is the entire code module with the relevant sections highlighted:
-          <div id="code-block-resize-sort-js" class="code-block"></div>
+          <div id="code-block-resize-sort-js" class="code-block"><i/></div>
           <a class="link2" href="http://jsfiddle.net/violet313/gwnzfLyr/" target="_blank">fiddle with it!</a>
         </div>
 
@@ -483,7 +483,7 @@
           Here's the enclosured filter. Most of the code is to do with the UI and might be required in any case.
           The actual filter is a one-liner; if the row is padding we just get the value we're filtering
           on from it's parent. Really simple.
-          <div id="code-block-resize-sort-filter-snip-js" class="code-block"></div>
+          <div id="code-block-resize-sort-filter-snip-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -498,17 +498,17 @@
 
         <div class="explain">
           Here's all the codes:
-          <div id="code-block-resize-sort-filter-js" class="code-block"></div>
+          <div id="code-block-resize-sort-filter-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           Here's all the <b>css</b>:
-          <div id="code-block-resize-sort-filter-css" class="code-block"></div>
+          <div id="code-block-resize-sort-filter-css" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           And for completeness sake, here's the <b>html</b>:
-          <div id="code-block-resize-sort-filter-html" class="code-block"></div>
+          <div id="code-block-resize-sort-filter-html" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -602,7 +602,7 @@
         <div class="explain">
           ~Well hopefully not. But here's what changed in the codes.
           Firstly the <code>MutationObserver</code>:
-          <div id="code-block-postrender-snip1-js" class="code-block"></div>
+          <div id="code-block-postrender-snip1-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -622,7 +622,7 @@
           Then in our <code>onRenderDetailCell</code> formatter callback, instead of supplying the detail as a raw <b>html</b> string like before;
           we now add a container element with an <code>id</code> that identifies the item/row and the column and we give it a <b>css</b> class
           name of <code>dynamic-cell-detail-ctr</code> which we will use merely as a selector.
-          <div id="code-block-postrender-snip2-js" class="code-block"></div>
+          <div id="code-block-postrender-snip2-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -642,13 +642,13 @@
           And here's the post-render event. This is now where we inject our detail into the <b>DOM</b>
           and apply the <code>dynamic-cell</code> <b>css</b> class in order to escape the overflow-clipping
           on the <code>slick-cell</code> container:
-          <div id="code-block-postrender-snip3-js" class="code-block"></div>
+          <div id="code-block-postrender-snip3-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           <br/>
           Here's all the codes with the relevant sections highlighted:
-          <div id="code-block-postrender-js" class="code-block"></div>
+          <div id="code-block-postrender-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -686,14 +686,14 @@
         <div class="explain">
           <p/>
           Here's the changes in the <code>onRenderDetailCell</code> callback:
-          <div id="code-block-postrender-snip4-js" class="code-block"></div>
+          <div id="code-block-postrender-snip4-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           <p/>
           The <code>onPostRender</code> function is almost the same as before only now the
           <code>item.id</code> is provided directly as the first function argument:
-          <div id="code-block-postrender-snip5-js" class="code-block"></div>
+          <div id="code-block-postrender-snip5-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -778,26 +778,26 @@
 
         <div class="explain">
           First, we extend the <code>MutationObserver</code> so that it additionally fires removed-row events:
-          <div id="code-block-postrender-cache-snip1-js" class="code-block"></div>
+          <div id="code-block-postrender-cache-snip1-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           Then in the <code>onDetailRemoved</code> event-handler, we add the row-item to an internal list.
           All padding rows within this list are going to remain cached:
-          <div id="code-block-postrender-cache-snip2-js" class="code-block"></div>
+          <div id="code-block-postrender-cache-snip2-js" class="code-block"><i/></div>
         </div>
 
 
         <div class="explain">
           Next we implement an idle-events pump (; which we can also re-use in the filter ;) to generate
           a bunch of <code>onSysIdle</code> events whenever the application is not up to much.
-          <div id="code-block-postrender-cache-snip3-js" class="code-block"></div>
+          <div id="code-block-postrender-cache-snip3-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
           Now we can implement functions to reap and revive padding rows that drift in & out of the
           cache:
-          <div id="code-block-postrender-cache-snip4-js" class="code-block"></div>
+          <div id="code-block-postrender-cache-snip4-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -815,7 +815,7 @@
         <div class="explain">
           <br/>
           Here's all the codes with the relevant sections highlighted:
-          <div id="code-block-postrender-cache-js" class="code-block"></div>
+          <div id="code-block-postrender-cache-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
@@ -855,7 +855,7 @@
         <div class="explain">
           <br/>
           Here's the codes with some notable sections highlighted:
-          <div id="code-block-splash-js" class="code-block"></div>
+          <div id="code-block-splash-js" class="code-block"><i/></div>
         </div>
 
         <div class="explain">
