use local cdn to support legacy slickgrid

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script type="text/javascript" src="https://6pac.github.io/SlickGrid/lib/jquery.event.drag-2.2.js"></script>
-    <script type="text/javascript" src="https://6pac.github.io/SlickGrid/slick.core.js"></script>
-    <script type="text/javascript" src="https://6pac.github.io/SlickGrid/slick.grid.js"></script>
-    <script type="text/javascript" src="https://6pac.github.io/SlickGrid/slick.dataview.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/violet313/SlickGrid/master/lib/jquery.event.drag-2.2.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/violet313/SlickGrid/master/slick.core.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/violet313/SlickGrid/master/slick.grid.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/violet313/SlickGrid/master/slick.dataview.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJScript.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushCss.js"></script>
