use jsdelivr cdn to support a forked local *legacy* slickgrid

--- a/assets/resize.sort.filter.html
+++ b/assets/resize.sort.filter.html
@@ -6,10 +6,12 @@
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/Celebio/SlickGrid/master/lib/jquery.event.drag-2.2.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/Celebio/SlickGrid/master/slick.core.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/Celebio/SlickGrid/master/slick.grid.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/Celebio/SlickGrid/master/slick.dataview.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/lib/jquery.event.drag-2.2.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/slick.core.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/slick.grid.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/slick.dataview.js"></script>
+ 
     <script type="text/javascript" src="/assets/resize.sort.filter.js"></script>
 
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
