remove moar wretched 6pac dependencies

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeMidnight.css">
-    <link rel="stylesheet" type="text/css" href="https://6pac.github.io/SlickGrid/slick.grid.css">
-    <link rel="stylesheet" type="text/css" href="https://6pac.github.io/SlickGrid/slick-default-theme.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/slick.grid.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/violet313/SlickGrid@master/slick-default-theme.css">
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
 
 
